--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -853,6 +853,9 @@ footer p {
   }
 
   .instructor-image {
+    flex: 0 0 auto;
+    width: 120px;
+    max-width: 100%;
     margin-bottom: 1rem;
   }
 
