--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -854,8 +854,9 @@ footer p {
 
   .instructor-image {
     flex: 0 0 auto;
-    width: 120px;
-    max-width: 100%;
+    width: 40%;
+    max-width: 140px;
+    min-width: 100px;
     margin-bottom: 1rem;
   }
 
